fix: gap items sidebar

--- a/src/app/shared/layouts/sidebar-private/sidebar-private.component.scss
+++ b/src/app/shared/layouts/sidebar-private/sidebar-private.component.scss
@@ -22,6 +22,7 @@
 
   .sidebar-content {
     display: flex;
+    gap: 0.5rem;
     flex-direction: column;
     align-items: center;
     padding: 1rem;
